import math
from abc import abstractmethod

from Actions.Sensor import Sensor
from Agents.ExplorerAgent import ExplorerAgent
from Items.ChickenCoop import ChickenCoop
from Items.Egg import Egg
from Items.Nest import Nest
from Items.Pickable import Pickable
from Items.Stone import Stone
from Items.Wall import Wall
from Worlds.Environment import Environment

class World(Environment):
    
    FACTOR = 3   # used to scale the closeness reward (calculate_closeness_reward)

    def __init__(self, width=30, height=30):
        self.width = width
        self.height = height
        self.solved = False
        self.map = [[None for _ in range(width)] for _ in range(height)]
        self.agents = []                                    # Phase 3

    def reset(self):
        self.solved = False
        self.map = [[None for _ in range(self.width)] for _ in range(self.height)]
        self.agents = []

    def observation_for(self, explorer: ExplorerAgent):      # Phase 5.2
        return explorer.sensor.get_observation(explorer.position)

    def act(self, action, agent: ExplorerAgent):  # Phase 7.1
        reward = 0
        
        future_pos = self.is_valid_action(action, agent)
        if future_pos is None:
            reward = -1
            agent.evaluateCurrentState(reward)  
            return

        agent.position = future_pos
        x, y = future_pos
        obj = self.map[y][x]
        
        #reward += self.calculate_closeness_reward(agent) * self.FACTOR
        reward += self.calculate_progress_reward(agent) * self.FACTOR     # Only reward if reaching new best distance

        # Interaction with pickable objects
        if isinstance(obj, Pickable) and not obj.picked_up:  # Only happens on foraging world
            agent.storeItem(obj, x, y)
            reward += obj.value

        # Dropping items at nests (eggs/stones)
        elif isinstance(obj, Nest):  # Only happens on foraging world
            totalReward = 0

            for item in list(agent.inventory):

                if obj.put(item):
                    item.position = obj.position
                    totalReward += item.value * 2
                    agent.discardItem(item)
                    # print(f"Deposited item {item.name} in Nest at {obj.position}")
                    # print(f"Nest now has {obj.num_of_items}/{obj.capacity} items.")
                    # print(f"chicken has {len(agent.inventory)} items left in inventory.")

            # After depositing, check solved condition
            self.solved = self.is_over()

            reward += totalReward

        # Reached the coop -> big reward                            # Only happens on chicken coop world
        elif isinstance(obj, ChickenCoop):
            reward += 1000
            self.solved = self.is_over()

        agent.evaluateCurrentState(reward)  # Phase 7.3

    def is_valid_action(self, action_to_validate, explorer):
        """ Returns None if action is invalid, or new position (x,y) if valid """

        if action_to_validate is None or explorer is None:
            return None

        dx, dy = action_to_validate.value
        px, py = explorer.position

        newx = px + dx
        newy = py + dy

        # Within bounds
        if newx < 0 or newx >= len(self.map[0]) or newy < 0 or newy >= len(self.map):
            return None
        # Check for wall at destination
        elif isinstance(self.map[newy][newx], Wall):
            return None

        return newx, newy

    def add_agent(self, agent: ExplorerAgent, position):
        agent.position = position                 # TODO - colocar o agente na posicao inicial?
        self.agents.append(agent)
        agent.install(Sensor(self.map), self)

    def show_world(self):
        # Show the world map, agents, eggs, stones, and nests
        map_representation = []
        for y in range(self.height):
            row = ""
            for x in range(self.width):
                obj = self.map[y][x]

                if any(agent.position == (x, y) for agent in self.agents):
                    row += "C "
                elif isinstance(obj, Wall):
                    row += "W "
                elif isinstance(obj, Egg):
                    row += "E "
                elif isinstance(obj, Nest):
                    row += "N "
                elif isinstance(obj, Stone):
                    row += "S "
                elif isinstance(obj, ChickenCoop):
                    row += "F "
                else:
                    row += ". "
            map_representation.append(row.strip())
            
        return "\n".join(map_representation)

    @abstractmethod
    def initialize_map(self, file_name):
        pass

    @abstractmethod
    def is_over(self) -> bool:
        """
        Returns True if the world is over, False otherwise
        Meaning it's over is not the same as it's solved! (all Agents could be out of steps, for example)
        """
        pass

    """
        def calculate_closeness_reward(self, agent: ExplorerAgent) -> float:
        # Returns a small reward based on how close the agent is to the goal
        if not agent.goal_vector:           # Foraging
            return 0.0

        distance = math.sqrt(agent.goal_vector[0]**2 + agent.goal_vector[1]**2)
        if distance == 0:
            return 0.0

        # Normalize distance to a reward between 0 and 1
        max_distance = math.sqrt(self.width**2 + self.height**2)
        normalized_distance = distance / max_distance

        # Invert so closer means higher reward
        reward = 1.0 - normalized_distance
        return reward
    """

    def calculate_progress_reward(self, agent: ExplorerAgent) -> float:  # MODIFIED: Added progress reward method
        """
        Returns reward only if the agent is closer to the goal than it has ever been.
        Discourages standing still or moving back and forth.
        """
        if not agent.goal_vector:
            return 0.0

        # Calculate raw distance
        current_dist = math.sqrt(agent.goal_vector[0] ** 2 + agent.goal_vector[1] ** 2)

        # If new best distance achieved
        if current_dist < agent.min_dist_reached:
            # Improvement magnitude
            improvement = agent.min_dist_reached - current_dist

            # Cap extreme jumps (e.g. initial step) to avoid outlier rewards
            reward = min(improvement, 2.0)

            # Update record
            agent.min_dist_reached = current_dist

            return reward

        return 0.0
